# ray-tracer-cpp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  Edge.h  GLWidget.cpp  GLWidget.h  Makefile  OpenGLAssignment.pro  Point.h  Polyhedron.cpp  Polyhedron.h  README  README.md  RayTracer.pro  Triangle.h  Tuple.h  Vector.h  bunny.txt  canvas.cpp  canvas.h  conanfile.txt  glwidget.cpp  glwidget.h  glwidgets.cpp  glwidgets.h  glwindow.cpp  glwindow.h  glwindow.ui  light.h  light.txt  main.cpp  material.h  materials.txt  point.h  polyhedra  polyhedrons  qt_open_gl_demo.pro  test_objs.txt  tuple.h  (+4 more)
scripts/: build.sh  clean-build.sh
src/: CMakeLists.txt  canvas.cpp  canvas.h  intersection.cpp  intersection.h  light.cpp  light.h  material.cpp  material.h  ray.cpp  ray.h  sphere.cpp  sphere.h  transformations.cpp  transformations.h  tuple.cpp  tuple.h  window.cpp  window.h  world.cpp  world.h
tests/: CMakeLists.txt  canvas_test.cpp  intersections_test.cpp  light_test.cpp  material_test.cpp  ray_test.cpp  sphere_test.cpp  testing_tools.h  transformations_test.cpp  tuple_test.cpp  world_test.cpp
